TravelLog/TravelLog-Deployment.yaml
# React Frontend Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-frontend
  namespace: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: react-frontend
  template:
    metadata:
      labels:
        app: react-frontend
    spec:
      containers:
      - name: react-frontend
        image: shinkiho/travel-log-front:1.0
---
# Django Backend Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-backend
  namespace: backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: django-backend
  template:
    metadata:
      labels:
        app: django-backend
    spec:
      containers:
      - name: django-backend
        image: seonxx/django-container:latest
        ports:
        - containerPort: 8000
