TravelLog/TravelLog-Service.yaml
# React Frontend Service
apiVersion: v1
kind: Service
metadata:
  name: react-frontend
  namespace: frontend
spec:
  type: LoadBalancer
  selector:
    app: react-frontend
  ports:
  - name: https
    port: 443
    targetPort: 3000
  loadBalancerIP: 192.168.0.26

---
# Django Backend Service
apiVersion: v1
kind: Service
metadata:
  name: django-backend
  namespace: backend
spec:
  type: ClusterIP
  selector:
    app: django-backend
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000
