TravelLog/TravelLog-NetworkPolicy.yaml
# Network Policy for Backend
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend-network-policy
  namespace: backend
spec:
  podSelector:
    matchLabels:
      app: django-backend
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            name: frontend
      ports:
        - protocol: TCP
          port: 8000
  egress:
    - to:
      - namespaceSelector:
          matchLabels:
            name: frontend

---
# Network Policy for Frontend
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: frontend-network-policy
  namespace: frontend
spec:
  podSelector:
    matchLabels:
      app: react-frontend
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
      - ipBlock:
          cidr: 192.168.0.0/24
  egress:
    - to:
      - ipBlock:
          cidr: 192.168.0.0/24
